# site-screen

./: .gitattributes  .gitignore  LICENSE  README.md  config.yaml  pyproject.toml
.github/workflows/: ci.yml
data/: SOURCES.md
docs/: README.md
pipeline/: __init__.py  __main__.py  audit.py  build.py  config.py  dedupe.py  economics.py  export.py  fetch.py  geometry.py  portfolio.py  requirements-geo.txt  scoring.py  synthetic.py  timeline.py  verdicts.py
tests/: test_audit.py  test_config.py  test_dedupe.py  test_economics.py  test_geometry.py  test_portfolio.py  test_scoring.py  test_synthetic_prices.py  test_timeline.py  test_verdicts.py
web/: index.html  llms.txt  robots.txt  sitemap.xml
web/css/: styles.css
web/data/: deal-notes.json  economics.json  integrity.json  memo-notes.json  parcels.geojson  portfolio.json  timeline-notes.json  timeline.json  verdicts.json
web/js/: app.js
worker/: README.md  wrangler.toml
worker/src/: index.js
