[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "site-screen-pipeline"
version = "0.1.0"
description = "Multi-criteria land suitability screen for South Texas (Wilson + Karnes counties)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Russell W. Hild" }]
# Runtime deps pinned exactly (supply-chain policy). The geospatial stack used by
# the fetch/build stages is heavier and platform-sensitive; it is pinned and
# installed at M1 from pipeline/requirements-geo.txt after verifying current
# releases against the 48h / changelog rule.
dependencies = [
    "PyYAML==6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "ruff==0.15.7",
]

[tool.setuptools]
packages = ["pipeline"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
